element overflowing body bug

--- a/src/styles/page1.css
+++ b/src/styles/page1.css
@@ -1,3 +1,4 @@
+
 body {
   margin: 0;
   padding: 0;
@@ -142,6 +143,10 @@ body {
   
 
   @media (max-width: 768px) {
+    body {
+      margin: 0;
+      padding: 0;
+    }
     .first-page {
       flex: 2;
       /* font-family: sans-serif; */
@@ -174,6 +179,10 @@ body {
   }
 
   @media (max-width: 395px) {
+    body {
+      margin: 0;
+      padding: 0;
+    }
     .first-page {
       padding-top: 0;
       margin-top:0;
@@ -186,6 +195,7 @@ body {
       margin-bottom: 0;
     }
     .typed {
-      width: 100vw;
+      width: 80vw;
+      margin-left: 0;
     }
   }
